# git-sweep

./: .gitignore  pyproject.toml
git_sweep/: audit.py  branch_filter.py  cleaner.py  cli.py  config.py  detector.py  filter_cli.py  hooks.py  integrations.py  notification_builder.py  notifications.py  rate_limiter.py  reporter.py  restore.py  restore_cli.py  restore_integration.py  scheduler.py  snapshot.py  throttled_cleaner.py
tests/: test_audit.py  test_branch_filter.py  test_cleaner.py  test_cli.py  test_config.py  test_detector.py  test_filter_cli.py  test_hooks.py  test_notification_builder.py  test_notifications.py  test_rate_limiter.py  test_reporter_snapshot.py  test_restore.py  test_restore_cli.py  test_scheduler.py  test_snapshot.py  test_throttled_cleaner.py
