[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "git-sweep"
version = "0.1.0"
description = "Automatically clean up merged branches and stale remotes with smart detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["git", "branches", "cleanup", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example/git-sweep"
Bug Tracker = "https://github.com/example/git-sweep/issues"
Changelog = "https://github.com/example/git-sweep/blob/main/CHANGELOG.md"

[project.scripts]
git-sweep = "git_sweep.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["git_sweep"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
